--- a/data/pages/works_me_team.html
+++ b/data/pages/works_me_team.html
@@ -109,7 +109,7 @@
     <div class="contents">
         <div class="team-contents">
             <div class="team">MEMORY<br>TEAM </div>
-            <div class="team-subject">멀티페르소나</div>
+            <div class="team-subject">흔적</div>
             <div class="team-explain">
                 <p class="team-explain-word">집을 떠올려 보면 온통 추억이 가득하다. 어릴적 사진이 들어있는 액자.. 지금은 안쓰는 카세트.. 집에 있는 과거의 물건은 시간이 지남에 따라 닳고 낡아간다. </p>
             </div>
