--- a/data/pages/about.html
+++ b/data/pages/about.html
@@ -17,7 +17,7 @@
     <header class="header">
         <ul class="navi-first__ul">
             <li class="navi-first__li">
-                <a href="..\pages\members.html">Members</a>
+                <a href="/data/pages/members.html">Members</a>
             </li>
             <li class="navi-first__li navi-first__li__works">
                 <a href="#">Works</a>
