--- a/data/pages/about.html
+++ b/data/pages/about.html
@@ -134,49 +134,67 @@
             </div> 
             <div class="letter-front__Middle">
                 <div>
-                    <object type="image/svg+xml" data="../images/svg/memo.svg" class="letter-front letter-front__MEMO sa sa-right" data-sa-margin="900"></object>
+                    <object type="image/svg+xml" data="../images/svg/memo.svg" class="letter-front letter-front__MEMO sa sa-right" data-sa-margin="400"  data-sa-delay="500"></object>
                 </div>
                 <div>
                     <object type="image/svg+xml" data="../images/svg/ry_front.svg" class="letter-front letter-front__RY sa sa-left"data-sa-margin="200"></object>
                 </div>
             </div> 
             <div class="letter-front__Bottom">
-                <object type="image/svg+xml" data="../images/svg/memory.svg" class="letter-front letter-front__MEMORY sa sa-up" data-sa-margin="600"></object>
+                <object type="image/svg+xml" data="../images/svg/memory.svg" class="letter-front letter-front__MEMORY sa sa-up" data-sa-margin="200"  data-sa-delay="800" ></object>
 
             </div>
         </div>
         <div class="scroll-section section__about sa sa-left">
             <p>
-                ‘MEMORY’란 이전의 인상이나 경험을 의식 속에 간직하거나 도로 생각해 낸다는 ‘기억’을 의미하며<br>
-                특별하고 인상깊었던 기억인 ‘추억’을 의미하기도 한다.
-            </p> 
+                <span class="sa" data-sa-delay="0" >‘MEMORY’란 이전의 인상이나 경험을 의식 속에 간직하거나 도로 생각해 낸다는 ‘기억’을 의미하며</span><br>
+                <span class="sa" data-sa-margin="600" data-sa-delay="300" >특별하고 인상깊었던 기억인 ‘추억’을 의미하기도 한다.</span>
+             </p>
         </div>
         <div class="scroll-section section__about__picture">
             <div class="section__about__ME sa sa-up">
-                <div><img src="../images/picture/jaeyeon2.png"> </div>
-                <div class="section__about__text">
-                    모든 사람은 자신만의 기억을 가지고 있고<br> 그 기억의 주체는 ‘나’[me]이다.
+                <div class="sa" data-sa-delay="0"><img src="../images/picture/jaeyeon2.png"> </div>
+                <div class="section__about__text sa" data-sa-delay="300" >
+                    모든 사람은 자신만의 기억을 가지고 있고<br> 그 기억의 주체는 <span class="bold">‘나[me]’</span>이다.
                 </div>
             </div>
             <div class="section__about__MEMO sa sa-down">
-                <div><img src="../images/picture/jaeyeon2.png"> </div>
-                <div class="section__about__text">
-                    그리고 ‘나’는 지나온 시간을 ‘기록’[memo]하고
+                <div class="sa" data-sa-delay="0"><img src="../images/picture/jaeyeon2.png"> </div>
+                <div class="section__about__text sa" data-sa-delay="300">
+                    그리고 ‘나’는 지나온 시간을 <span class="bold">‘기록[memo]’</span>하고
                 </div>
             </div>
             <div class="section__about__MEMORY sa sa-up">
-                <div><img src="../images/picture/jaeyeon2.png"> </div>
-                <div class="section__about__text">
-                    결국 각자의 머리 속에 ‘기억’[memory]된다.
+                <div class="sa" data-sa-delay="0"><img src="../images/picture/jaeyeon2.png"> </div>
+                <div class="section__about__text sa" data-sa-delay="300">
+                    결국 각자의 머리 속에 <span class="bold">‘기억[memory]’</span>된다.
                 </div>
             </div>
         </div>
-        <div class="scroll-section section__about sa sa-left">
+        <div class="scroll-section section__about">
             <div class="align-right">
-                그렇게 기억은 ‘나’라는 존재를 규정할 수 있는 정체성이 된다.<br><br>
-                본 전시에서 우리는 ‘MEMORY’에 대한 각자의 해석을 통해<br>
-                자신을 기억하고 돌이켜보는 기회를 가지며 스스로의 정체성을 확립한다.<br>
-                그리고 각자의 개성이 담긴 작품을 통해서 우리의 생각을 공유하고 소통하고자 한다.
+                <table>
+                    <tr class="sa sa-left" data-sa-delay="0">
+                        <td>그렇게 기억은 ‘나’라는 존재를 규정할 수 있는 정체성이 된다.</td>
+                    </tr>
+                    <tr>
+                        <td><br></td>
+                    </tr>
+                    <tr class="sa sa-left" data-sa-delay="400"> 
+                        <td>본 전시에서 우리는 ‘MEMORY’에 대한 각자의 해석을 통해</td>
+                    </tr>
+                    <tr class="sa sa-left" data-sa-delay="800">
+                        <td><span class="sa sa-left" data-sa-delay="0">자신을 기억하고 돌이켜보는 기회를 가지며 스스로의 정체성을 확립한다.</span></td>
+                    </tr>
+                    
+                    <tr class="sa sa-left" data-sa-delay="1200">
+                        <td><span class="sa sa-left" data-sa-delay="0">그렇게 기억은 ‘나’라는 존재를 규정할 수 있는 정체성이 된다.</span></td>
+                    </tr>
+                </table><!--
+                <span class="sa sa-left" data-sa-delay="0">그렇게 기억은 ‘나’라는 존재를 규정할 수 있는 정체성이 된다.</span><br><br>
+                <span class="sa sa-left" data-sa-delay="400">본 전시에서 우리는 ‘MEMORY’에 대한 각자의 해석을 통해</span><br>
+                <span class="sa sa-left" data-sa-delay="800">자신을 기억하고 돌이켜보는 기회를 가지며 스스로의 정체성을 확립한다.</span><br>
+                <span class="sa sa-left" data-sa-delay="1200">그리고 각자의 개성이 담긴 작품을 통해서 우리의 생각을 공유하고 소통하고자 한다.</span>-->
             </div>
         </div>
         <div class="scroll-section section__opening-film">
@@ -194,9 +212,9 @@
             <div class="section-contents sa">
                 <div class="map"><img src="../images/picture/map.png"> </div>
                 <div><span class="sa sa-down">부산광역시 해운대구 센텀동로 57<br><span class="bold">부산디자인진흥원 1F 전시실<br></span></span>
-                    <br><span class="sa sa-right">금. 12 pm ~ 6 pm</span>
-                    <br><span class="sa sa-right">토. 12 pm ~ 6 pm</span>
-                    <br><span class="sa sa-right">일. 12 pm ~ 6 pm</span>
+                    <br><span class="sa sa-right" data-sa-delay="200">금. 12 pm ~ 6 pm</span>
+                    <br><span class="sa sa-right" data-sa-delay="400">토. 12 pm ~ 6 pm</span>
+                    <br><span class="sa sa-right" data-sa-delay="600">일. 12 pm ~ 6 pm</span>
                 </div>
             </div>
         </div>
@@ -206,33 +224,33 @@
             </div>
             <div class="section-contents sa">
                 <table class="madeby__table sa sa-down">
-                    <tr>
-                        <th class="align-right">위원장</th>
+                    <tr class="sa" data-sa-delay="0" >
+                        <th class="align-right" >위원장</th>
                         <td>우승용</td>
                     </tr>
-                    <tr>
+                    <tr class="sa"  data-sa-delay="300">
                         <th class="align-right">부위원장</th>
                         <td>이우진</td>
                     </tr>
                 </table>
                 <table class="madeby__table sa sa-up" >
-                    <tr>
+                    <tr class="sa" data-sa-delay="0">
                        <th class="align-right">Web</th>
                        <td>김희제&nbsp;&nbsp;&nbsp;&nbsp;김수빈&nbsp;&nbsp;&nbsp;&nbsp;박수빈&nbsp;&nbsp;&nbsp;&nbsp;이우진&nbsp;&nbsp;&nbsp;&nbsp;이황준</td>
                     </tr>
-                    <tr>
+                    <tr class="sa" data-sa-delay="300">
                         <th class="align-right">Brochure</th>
                         <td>김나영&nbsp;&nbsp;&nbsp;&nbsp;권성화&nbsp;&nbsp;&nbsp;&nbsp;권유리&nbsp;&nbsp;&nbsp;&nbsp;서혜인</td>
                     </tr>
-                    <tr>
+                    <tr class="sa" data-sa-delay="600">
                         <th class="align-right">Dp</th>
                         <td>김재환&nbsp;&nbsp;&nbsp;&nbsp;김민송&nbsp;&nbsp;&nbsp;&nbsp;배나영&nbsp;&nbsp;&nbsp;&nbsp;신유진</td>
                     </tr>
-                    <tr>
+                    <tr >
                        <th><br</th>
                        <td><br></td>
                     </tr>
-                    <tr>
+                    <tr class="sa" data-sa-delay="900">
                         <th class="align-right">Intro</th>
                         <td>배나영&nbsp;&nbsp;&nbsp;&nbsp;김나연&nbsp;&nbsp;&nbsp;&nbsp;박지혜</td>
                     </tr>
@@ -246,13 +264,13 @@
             </div>
             <div class="section-contents">
                 <table class="contact__table">
-                    <tr class="sa">
+                    <tr class="sa"  data-sa-delay="200">
                         <th>
                             <svg xmlns="http://www.w3.org/2000/svg" width="2.5rem" height="2.5rem" fill="#000000" class="icon"  viewBox="0 0 256 256"><rect width="256" height="256" fill="none"></rect><circle cx="128" cy="128" r="96" fill="none" stroke="#000000" stroke-miterlimit="10" stroke-width="16"></circle><line x1="37.46679" y1="96" x2="218.53174" y2="96" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></line><line x1="37.47057" y1="160" x2="218.53448" y2="160" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></line><ellipse cx="128" cy="128" rx="40" ry="93.42294" fill="none" stroke="#000000" stroke-miterlimit="10" stroke-width="16"></ellipse></svg>
                         </th>
                         <td>dt.pusan.ac.kr</td>
                     </tr>
-                    <tr class="sa">
+                    <tr class="sa"  data-sa-delay="500">
                         <th>
                             <svg xmlns="http://www.w3.org/2000/svg" width="2.5rem" height="2.5rem" fill="#000000" class="icon" viewBox="0 0 256 256"><rect width="256" height="256" fill="none"></rect><circle cx="128" cy="128" r="40" fill="none" stroke="#000000" stroke-miterlimit="10" stroke-width="16"></circle><rect x="36" y="36" width="184" height="184" rx="48" stroke-width="16" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" fill="none"></rect><circle cx="180" cy="75.99998" r="12"></circle></svg>
                         </th>
@@ -262,7 +280,7 @@
                             </a>
                         </td>
                     </tr>
-                    <tr class="sa">
+                    <tr class="sa"  data-sa-delay="800">
                         <th>
                             <svg xmlns="http://www.w3.org/2000/svg" width="2.5rem" height="2.5rem" fill="#000000" class="icon" viewBox="0 0 256 256"><rect width="256" height="256" fill="none"></rect><path d="M92.47629,124.81528a84.34782,84.34782,0,0,0,39.05334,38.8759,7.92754,7.92754,0,0,0,7.8287-.59231L164.394,146.40453a8,8,0,0,1,7.58966-.69723l46.837,20.073A7.97345,7.97345,0,0,1,223.619,174.077,48.00882,48.00882,0,0,1,176,216,136,136,0,0,1,40,80,48.00882,48.00882,0,0,1,81.923,32.381a7.97345,7.97345,0,0,1,8.29668,4.79823L110.31019,84.0571a8,8,0,0,1-.65931,7.53226L93.01449,117.00909A7.9287,7.9287,0,0,0,92.47629,124.81528Z" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></path></svg>
                         </th>
@@ -275,7 +293,7 @@
         <div class="scroll-section section__letter-end">
             <div class="letter-end__Top" >
                 <div>
-                    <object type="image/svg+xml" data="../images/svg/me.svg" class="letter-end letter-end__ME sa sa-left" data-sa-margin="200"></object>
+                    <object type="image/svg+xml" data="../images/svg/me.svg" class="letter-end letter-end__ME sa sa-left" data-sa-margin="200" data-sa-delay="0"></object>
                 </div>
                 <div>
                     <object type="image/svg+xml" data="../images/svg/mory.svg" class="letter-end letter-end__MORY sa" data-sa-margin="200"></object>
@@ -283,14 +301,14 @@
             </div> 
             <div class="letter-end__Middle">
                 <div>
-                    <object type="image/svg+xml" data="../images/svg/memo.svg" class="letter-end letter-end__MEMO sa sa-left" data-sa-margin="500"></object>
+                    <object type="image/svg+xml" data="../images/svg/memo.svg" class="letter-end letter-end__MEMO sa sa-left" data-sa-margin="200" data-sa-delay="400"></object>
                 </div>
                 <div>
                     <object type="image/svg+xml" data="../images/svg/ry.svg" class="letter-end letter-end__RY sa" data-sa-margin="100"></object>
                 </div>
             </div> 
             <div class="letter-end__Bottom" >
-                <object type="image/svg+xml" data="../images/svg/memory.svg" class="letter-end letter-end__MEMORY sa sa-left" data-sa-margin="700"></object>
+                <object type="image/svg+xml" data="../images/svg/memory.svg" class="letter-end letter-end__MEMORY sa sa-left" data-sa-margin="200" data-sa-delay="800"></object>
             </div>
         </div>
     </div>
