team update 그리고 유튜브 js 포함

--- a/data/pages/works_me_team.html
+++ b/data/pages/works_me_team.html
@@ -107,75 +107,71 @@
     <div class="contents">
       <div class="team">
             <div class="team_name">
-                <div class="team_name_box">MEMORY<br>TEAM</div>
+                <div class="middle_box">ME<br>TEAM</div>
             </div>
             <div class="team_title">
-                <div class="team_title_box">멀티페르소나</div>
+                <div class="middle_box">멀티페르소나</div>
                 </div>
             <div class="team_text">
-                <p class="team_text_word">
+                <p>
                     집을 떠올려 보면 온통 추억이 가득하다. <br>
                     어릴적 사진이 들어있는 액자.. 지금은 안쓰는 카세트.. <br>
                     집에 있는 과거의 물건은 시간이 지남에 따라 닳고 낡아간다. 
                 </p>
             </div>
         </div>
-    </div>
-    <div class="team">
-        <div class="team_name">
-            <div class="team_name_box">MEMORY<br>TEAM</div>
-        </div>
-        <div class="team_title">
-            <div class="team_title_box">멀티페르소나</div>
+        <div class="team">
+            <div class="team_film">
+                TEAM<br>FILM
             </div>
-        <div class="team_text">
-            <p class="team_text_word">
-                집을 떠올려 보면 온통 추억이 가득하다. <br>
-                어릴적 사진이 들어있는 액자.. 지금은 안쓰는 카세트.. <br>
-                집에 있는 과거의 물건은 시간이 지남에 따라 닳고 낡아간다. 
-            </p>
-        </div>
-    </div>
-    <div class="contents">
-        <div class="team_flex_container">
-            <div class="team">
-                <div class="team_name">
-                    <div class="team_name_box">MEMORY<br>TEAM</div>
+            <div class="team_film_title">
+                <div class="middle_box">들여다보다</div>
                 </div>
-                <div class="team_title">
-                    <div class="team_title_box">
-                        멀티페르페르소나
-                    </div>
-                </div>
-                <div class="team_text">
-                    <p class="team_text_word">
-                        집을 떠올려 보면 온통 추억이 가득하다. <br>
-                        어릴적 사진이 들어있는 액자.. 지금은 안쓰는 카세트.. <br>
-                        집에 있는 과거의 물건은 시간이 지남에 따라 닳고 낡아간다. 
-                    </p>
+            <div class="team_film_text">
+                <div>
+                    가까이서 자세히 보다 바쁜 일상 속에 우리는 ‘나’를 들여다볼 시간이 없다. 
+                    <br>당장에 해야 할 과제나 일들에 밀려
+                    <br>내가 좋아하는 일들은 뒷전에 놓기 때문이다. 
+                    <br>영상은 집으로 향하는 과정을 담고있다. 
+                    <br>주인공은 집으로 향하는 동안 내가 해야만 하는 일을 걷어내고
+                    <br>그 뒤에 가려져 있던 내가 정말 하고싶은 일들을 들여다본다.
                 </div>
             </div>
-            <div class="team2">
-                <div class="team_name">
-                    <div class="team_name_box">MEMORY<br>TEAM</div>
+        </div>
+        <div class="team">
+            <div>
+                <iframe 
+                class="video_team_film"
+                id="team_video"
+                src="https://www.youtube.com/embed/4TWR90KJl84" 
+                title="YouTube video player" frameborder="0" 
+                allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+        </div>
+        <div class="team">
+            <div class="team_film">
+                TEAM<br>FILM
+            </div>
+            <div class="team_film_title">
+                <div class="middle_box">들여다보다</div>
                 </div>
-                <div class="team_title">
-                    <div class="team_title_box">
-                        멀티페르소nn나
-                    </div>
-                </div>
-                <div class="team_text">
-                    <p class="team_text_word">
-                        집을 떠올려 보면 온통 추억이 가득하다. <br>
-                        어릴적 사진이 들어있는 액자.. 지금은 안쓰는 카세트.. <br>
-                        집에 있는 과거의 물건은 시간이 지남에 따라 닳고 낡아간다. 
-                    </p>
+            <div class="team_film_text">
+                <div>
+                    가까이서 자세히 보다 바쁜 일상 속에 우리는 ‘나’를 들여다볼 시간이 없다. 
+                    <br>당장에 해야 할 과제나 일들에 밀려
+                    <br>내가 좋아하는 일들은 뒷전에 놓기 때문이다. 
+                    <br>영상은 집으로 향하는 과정을 담고있다. 
+                    <br>주인공은 집으로 향하는 동안 내가 해야만 하는 일을 걷어내고
+                    <br>그 뒤에 가려져 있던 내가 정말 하고싶은 일들을 들여다본다.
                 </div>
             </div>
         </div>
     </div>
+    
 </body>
 <script src="../js/scroll.js"></script>
 <script src="../js/header.js"></script>
 <script src="../js/about.js"></script>
+<script src="../js/iframe.js"></script>
 </html>
