김희제 저장

--- a/data/pages/works_me_team.html
+++ b/data/pages/works_me_team.html
@@ -140,6 +140,13 @@
         </div>
         <div class="team">
             <div>
+                <video id="myVideo" controls autoplay>
+                    <video controls poster="../images/picture/jaeyeon2.png">
+                        <source src="../images/teamfilm/example.mp4" type="video/mp4">
+                        <strong>Your browser does not support the video tag.</strong>
+                      </video>
+                </video>
+                <!--
                 <iframe 
                 class="video_team_film"
                 id="team_video"
@@ -147,6 +154,7 @@
                 title="YouTube video player" frameborder="0" 
                 allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                 </iframe>
+                -->
             </div>
         </div>
         <div class="team">
