--- a/data/pages/works_me_team.html
+++ b/data/pages/works_me_team.html
@@ -113,7 +113,7 @@
             </div>
             <div class="team_title">
                 <div class="concept">CONCEPT</div>
-                <div>멀티페르소나</div>
+                <div>CONCEPT</div>
                 <div class="concept_text">
                     집을 떠올려 보면 온통 추억이 가득하다. <br>
                     어릴적 사진이 들어있는 액자.. 지금은 안쓰는 카세트.. <br>
