모바일 형태잡기(style건듬)

--- a/data/pages/works_me_team.html
+++ b/data/pages/works_me_team.html
@@ -147,7 +147,7 @@
                 </div>
             </div>
         </div>
-        <div class="team">
+        <div>
             <div>
                 <video id="myVideo" controls width="250">
 
