--- a/data/pages/members.html
+++ b/data/pages/members.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="viewport"content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <title>PNU DT 2021</title>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../style/style.css">
+    <link rel="stylesheet" type="text/css" href="../style/individual.css">
     <link rel="stylesheet" type="text/css" href="../style/members.css">
-    <link rel="stylesheet" type="text/css" href="../style/members_flip.css">
+    <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css' rel='stylesheet' type='text/css'>
+
 </head>
+
 <body>
     <header class="header__PC">
         <ul class="navi-first__ul">
@@ -278,9 +278,14 @@
                 </a>
             </div>
             <div class = "member">
-                <div class="members">
-                    <img src="..\images\profile\단체.jpg">
-                </div>
+                <a class="card">
+                    <div class="imgDiv memLogo">
+                        <img src="..\images\logo\memory.png">
+                    </div>
+                    <!-- <div class="imgDiv memLogo2">
+                        <img src="..\images\logo\memory2.png">
+                    </div> -->
+                </a>
             </div>
             <div class = "member">
                 <a href="works_memory_individual2.html" class="card">
@@ -349,7 +354,7 @@
                 </a>
             </div>
             <div class = "member">
-                <a href="works_me_individual2.html" class="card">
+                <a href="works_me_individual5.html" class="card">
                     <div class="imgDiv scale">
                         <img src="..\images\profile\이황준11.jpg">
                         <div class="imgDescDiv">
