희제노력중1

--- a/data/pages/open.html
+++ b/data/pages/open.html
@@ -41,17 +41,25 @@
                 </div>
                 <div class="opening-place "> 부산디자인진흥원 1F 전시실 </div>
             </div>
-            <div class="section__letter-front">
-                <div class="height_">
-                    <object type="image/svg+xml" data="../images/svg/me.svg" class="letter-front__ME"></object>
-                    <object type="image/svg+xml" data="../images/svg/mory.svg" class="letter-front__MORY"></object>
-                </div>
-                <div class="height_">
-                    <object type="image/svg+xml" data="../images/svg/memo.svg" class="letter-front__MEMO"></object>
-                    <object type="image/svg+xml" data="../images/svg/ry.svg" class="letter-front__RY"></object>
-                </div>
-                <div class="height_">
-                    <object type="image/svg+xml" data="../images/svg/memory.svg" class="letter-front__MEMORY"></object>     
+            <div class="scroll-section section__letter-front">
+                <div class="letter-front__Top height_" >
+                    <div class="letter-front__blur">
+                        <object type="image/svg+xml" data="../images/svg/me.svg" class="letter-front letter-front__ME "></object>
+                    </div>
+                    <div class="letter-front__blur">
+                        <object type="image/svg+xml" data="../images/svg/mory.svg" class="letter-front letter-front__MORY"></object>
+                    </div>
+                </div> 
+                <div class="letter-front__Middle height_">
+                    <div class="letter-front__blur">
+                        <object type="image/svg+xml" data="../images/svg/memo.svg" class="letter-front letter-front__MEMO"></object>
+                    </div>
+                    <div class="letter-front__blur">
+                        <object type="image/svg+xml" data="../images/svg/ry.svg" class="letter-front letter-front__RY"></object>
+                    </div>
+                </div> 
+                <div class="letter-front__Bottom height_">
+                    <div class="letter-front__blur"><object type="image/svg+xml" data="../images/svg/memory.svg" class="letter-front letter-front__MEMORY"></object></div>
                 </div>
             </div>
         </div>
