mobile도 했다....근데 이거 index에 적용 어캐함?

--- a/data/pages/open.html
+++ b/data/pages/open.html
@@ -17,6 +17,11 @@
                     Pusan National University Department of Design<br>
                     Design & Technology
                 </div>
+                <div class="introduce_mobile">
+                    Pusan National University
+                    <br>Department of Design
+                    <br>Design & Technology
+                </div>
                 <div>
                     <div class="exhibi bolder">12th Graduation Exhibition</div>
                     <div class="open-web bolder">2021. 11. 19<br>
