--- a/data/pages/about.html
+++ b/data/pages/about.html
@@ -13,6 +13,10 @@
     <link rel="stylesheet" type="text/css" href="../style/about.css">
     <link rel="stylesheet" type="text/css" href="../style/scrollbar.css">
     <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css' rel='stylesheet' type='text/css'>
+    
+    <script type="text/javascript">
+        window.location.replace('./open.html')
+   </script>
 </head>
 <body>
     <header class="header__PC">
