김희제 저장용

--- a/data/pages/works_me_team.html
+++ b/data/pages/works_me_team.html
@@ -260,9 +260,19 @@
             <div class="team_name">
                 <div>ME TEAM</div>
             </div>
+            <div class="mobile_team_members">
+                <div><span class="concept">MEMBERS</span></div>
+                <ui class="members_list">
+                    <li class="members_go"><a href="#mem_1" >김나영</a></li>
+                    <li class="members_go"><a href="#mem_2" >김나영</a></li>
+                    <li class="members_go"><a href="#mem_3" >김나영</a></li>
+                    <li class="members_go"><a href="#mem_4" >김나영</a></li>
+                    <li class="members_go"><a href="#mem_5" >김나영</a></li>
+                </ui>
+            </div>
             <div class="team_title">
                 <div class="concept">CONCEPT</div>
-                <div>CONCEPT</div>
+                <div class="concept_title">CONCEPT</div>
                 <div class="concept_text">
                     집을 떠올려 보면 온통 추억이 가득하다. <br>
                     어릴적 사진이 들어있는 액자.. 지금은 안쓰는 카세트.. <br>
@@ -324,7 +334,7 @@
         </div>
         <div class="team">
             <div class="team_interactive">
-                TEAM<br>INTERACTIVE<br>ART
+                TEAM <br class="mobile_none">INTERACTIVE <br class="mobile_none">ART
             </div>
             <div>
                 <img class="team_interactive_image_1" src="../images/team/inter1.png">
