--- a/data/pages/open.html
+++ b/data/pages/open.html
@@ -28,11 +28,12 @@
                                 Website Open</div>
                 </div>
             </div>
-            <div class = " open_information">
-                <div class="opening-date bolder"> 2021.11.19 - 2021.11.22 </div>
+            <div class = "open_information">
+                <div class="opening-offline bolder">  </div>
+                <div class="opening-date bolder"> 오프라인 2021.11.20 - 2021.11.21 </div>
                 <div class="opening-time">
-                    Opening 11.19 19:00<br>
-                    Open 10:00, Close 20:00<br>
+                    Opening 11.19 18:00<br>
+                    Open 10:00, Close 18:00<br>
                 </div>
                 <div class="opening-place"> 부산디자인진흥원 1F 전시실 </div>
             </div>
