모든 페이지 하단 타임라인 추가

--- a/data/pages/works_memo_individual5.html
+++ b/data/pages/works_memo_individual5.html
@@ -8,6 +8,7 @@
     <title>PNU DT 2021</title>
     <link rel="stylesheet" type="text/css" href="../style/style.css">
     <link rel="stylesheet" type="text/css" href="../style/individual.css">
+    <link rel="stylesheet" type="text/css" href="../style/scrollbar.css">
     <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css' rel='stylesheet' type='text/css'>
 
 </head>
@@ -200,7 +201,7 @@
 
     <div class="contents">
         <div class="scroll-section person_introduce">
-            <div class="scroll-section">
+            <div class="scroll-section section-divider" id="section__indivisual">
                 <div class="hover01 column">
                     <div>
                         <figure id="person" class="pc_only"><img src="../images/profile/우승용11.jpg" ></figure>
@@ -270,7 +271,7 @@
 
             
 
-            <div class="scroll-section section-divider" id="section__teaminter">
+            <div class="scroll-section">
                 <div class="inter">
                     <div class="inter_how sa sa-up"> INTERACTIVE ART</div>
                     <div class = "line sa sa-right mobile_only"></div>
@@ -319,7 +320,8 @@
                     </div>
                 </div>
             </div>
-
+            <div class="scroll-section section-divider" id="section__end">
+            </div>
         </div>
 
         <div style="overflow-x:auto">
@@ -340,7 +342,7 @@
         </div>
         <div class="scroll-bar">
             <div class="scroll-bar__margin"></div>
-            <div class="scroll-bar__divider"><a class="scroll-bar__divider__name now" data-target="#section__introduce">Main</a></div>
+            <div class="scroll-bar__divider"><a class="scroll-bar__divider__name now" data-target="#section__indivisual">individual</a></div>
             <div class="scroll-bar__main">
                 <div class="scroll-bar__section"></div>
                 <div class="scroll-bar__divider"><a class="scroll-bar__divider__name" data-target="#section__poster">Concept Poster</a></div>
@@ -348,7 +350,7 @@
                 <div class="scroll-bar__divider"><a class="scroll-bar__divider__name" data-target="#section__inter">Interactive Art</a></div>
                 <div class="scroll-bar__section"></div>
             </div>
-            <div class="scroll-bar__divider"><a class="scroll-bar__divider__name" data-target="">End</a></div>
+            <div class="scroll-bar__divider"><a class="scroll-bar__divider__name" data-target="#section__end">End</a></div>
             <div class="scroll-bar__margin"></div>
         </div>
 
