김수빈 우진이와 합치기 전

--- a/data/pages/works_me_individual1.html
+++ b/data/pages/works_me_individual1.html
@@ -204,7 +204,7 @@
             <div class="scroll-section section-divider" id="section__introduce">
                 <div class="hover01 column">
                     <div>
-                        <figure id="person" class="pc_only"><img src="../images/profile/김나영11.jpg" ></figure>
+                        <figure id="person" class="pc_only"><img src="../images/profile/34/김나영34.png" ></figure>
                         <figure class="mobile_only"><img src="../images/individual/mobile/김나영_mobile.jpg" ></figure>
                     </div>
                 </div>
