--- a/data/pages/works_me_individual3.html
+++ b/data/pages/works_me_individual3.html
@@ -7,7 +7,9 @@
     <meta name="viewport"content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <title>PNU DT 2021</title>
     <link rel="stylesheet" type="text/css" href="../style/style.css">
-    <link rel="stylesheet" type="text/css" href="../style/individual.css">
+    <link rel="stylesheet" type="text/css" href="../style/individual.css">    
+    <link rel="stylesheet" type="text/css" href="../style/scrollbar.css">
+
     <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css' rel='stylesheet' type='text/css'>
 
 </head>
@@ -203,7 +205,7 @@
             <div class="scroll-section">
                 <div class="hover01 column">
                     <div>
-                        <figure id="person" class="pc_only"><img src="../images/profile/김재환11.jpg" ></figure>
+                        <figure id="person" class="pc_only"><img src="../images/profile/34/김재환34.png" ></figure>
                         <figure class="mobile_only"><img src="../images/individual/mobile/김재환_mobile.jpg" ></figure>
                     </div>
                 </div>
@@ -220,13 +222,11 @@
         <div class="scroll-section">
             <div class="work_information">
                 <div id="concept">CONCEPT</div>
-                <div id="work_name">멀티 페르소나</div>
+                <div id="work_name">ME -> WE</div>
                 <div id="work_explain">
-                    집을 떠올려 보면 온통 추억이 가득하다. 어릴적 사진이 들어있는 액자.. 지금은 안쓰는 
-                    카세트.. 집에 있는 과거의 물건은 시간이 지남에 따라 닳고 낡아간다. 그렇지만 그 시간
-                    만큼 추억이 입혀져 사람에게 특별한 의미를 가지게 된다. 하지만 추억의 물건은 현대의 
-                    것에 비하면 기능이 부족하여 굳이 쓸 필요가 없어졌다. 그렇더라도 우리는 버릴 수 없다.
-                    손이 닿는 순간 그때 그 시간으로 돌아가기 때문에.</div>
+                    코로나 19로 바뀐 일상을 보내고 있는 우리들, 아니 각자의 ‘ME’. 그리고 하루하루를 살아가며 갈수록 얕아지는 ‘WE’의 관계 속에서 개인화되어가는 ‘나’는 ‘우리’와 함께했던 추억을 그리워하곤 한다.
+                    새로운 사람과 만나고, 인사하고, 소통하던 그 순간 ‘우리’는, 각각의 ‘나’는 설레었고 행복했다. 이번 전시를 통해 다시금 ‘WE’와 함께 추억을 만들어나가고자 한다.
+                    이번 전시회의 소주제인 ME를 뒤집어보면 WE라는 글자가 된다. 이처럼 작품을 통해 앞서 전시회를 다녀간 또 다른 ‘나’들의 흔적과 마주하며 ‘우리’를 체험하고, 전시를 통해 우리가 함께하고 있음을 느끼는 시간이 되고자 한다.</div>
             </div>
         </div>
             <div class="scroll-section section-divider" id="section__poster">
@@ -235,31 +235,16 @@
                     <div class = "line sa sa-right mobile_only"></div>
                     <div class="mom_touch sa sa-scaleUp" data-sa-delay="100">" 맘스터치 "</div>
                     <div class="touch_information sa sa-down pc_only" data-sa-delay="200">
-                        집을 떠올려 보면 온통
-                        추억이 가득하다. 어릴
-                        적 사진이 들어있는 액
-                        자.. 지금은 안쓰는 카세
-                        트.. 집에 있는 과거
-                        의 물건은 시간이 지남
-                        에 따라 닳고 낡아간
-                        다. 그렇지만 그 시간
-                        만큼 추억이 입</div>
+                        <br><br><br><br><br><br>
+                    </div>
                    
                 </div>
                 <div>
-                    <figure class="individual_img sa sa-right pc_only" data-sa-delay="400"><img src="../images/individual/poster.png"></figure>
+                    <figure class="individual_img sa sa-right pc_only" data-sa-delay="400"><img src="../images/individual/poster/kjh_poster.jpg"></figure>
                     <figure class="mobile_only sa sa-scaleUp img_mar" data-sa-delay="400"><img src="../images/individual/mobile/poster_mobile.png"></figure>
                 </div>
                 <div class="touch_information sa sa-down mobile_only" data-sa-delay="200">
-                    집을 떠올려 보면 온통
-                    추억이 가득하다. 어릴
-                    적 사진이 들어있는 액
-                    자.. 지금은 안쓰는 카세
-                    트.. 집에 있는 과거
-                    의 물건은 시간이 지남
-                    에 따라 닳고 낡아간
-                    다. 그렇지만 그 시간
-                    만큼 추억이 입</div>
+                    <br><br><br><br></div>
             </div>
 
 
@@ -274,8 +259,8 @@
                 <div class="inter">
                     <div class="inter_how sa sa-up"> INTERACTIVE ART</div>
                     <div class = "line sa sa-right mobile_only"></div>
-                    <div class="mom_touch sa sa-scaleUp mobile_only" data-sa-delay="100">" 맘스터치 "</div>
-                    <figure id="howto_img" class= "img_mar sa sa-scaleUp" data-sa-delay="200"><img src="../images/individual/individual_interaction.PNG" class="mobile__img"></figure>
+                    <div class="mom_touch sa sa-scaleUp mobile_only" data-sa-delay="100">" We Memo Me "</div>
+                    <figure id="howto_img" class= "img_mar sa sa-scaleUp" data-sa-delay="200"><img src="../images/individual/view/kjh_view_1.png" class="mobile__img"></figure>
                     <div class="touch_information sa sa-down mobile_only" data-sa-delay="200">
                         집을 떠올려 보면 온통
                         추억이 가득하다. 어릴
@@ -294,26 +279,29 @@
                             <div class="howto_explain sa sa-left pc_only" data-sa-delay="100"> 웹캠, 빔 프로젝터</div>
                         </div>
                         <div class="how">
-                            <div class="howto sa sa-up pc_only"data-sa-delay="200">" 맘스터치 "</div>
+                            <div class="howto sa sa-up pc_only"data-sa-delay="200">" We Memo Me "</div>
                             <div class="howto_explain pc_only"> 
-                                <div class = "sa sa-left" data-sa-delay="300">집을 떠올려 보면 온통 추억이 가득하다.</div>
-                                <div class = "sa sa-left" data-sa-delay="400">어릴적 사진이 들어있는 액자.. 지금은 안쓰는 카세트.. </div>
-                                <div class = "sa sa-left" data-sa-delay="500"> 집에 있는 과거의 물건은 시간이 지남에 따라 닳고 낡아간다. </div>
-                                <div class = "sa sa-left" data-sa-delay="600">그렇지만 그 시간만큼 추억이 입</div>
+                                <div class = "sa sa-left" data-sa-delay="300"> 코로나 시국을 겪으며, 그리고 나이도 들어가면서, 개인화된 삶이 길어졌다. ‘나’는 우리와 마주보고, 인사하며, 우리와 함께 추억을 만들어 가는 것이 점점 낯설다.</div>
+                                <div class = "sa sa-left" data-sa-delay="400">가끔 찾아보는 과거의 ‘우리’모습을 보며 갈증하고, 그리워하지만 현재의 ‘나’는 다시 ‘우리’ 속으로 들어가기가 두렵다. </div>
+                                <div class = "sa sa-left" data-sa-delay="500"> 하지만 ME의 글자를 뒤집어 WE가 되었듯이 우리는 단순히 서로 마주하는 것만으로도 함께함을 느낄 수 있다. </div>
+                                <div class = "sa sa-left" data-sa-delay="600">과거 누군가인 ‘ME’의 흔적은 이곳에 남아 현재의 ‘나’에게 남기는 그림이 되고, 과거와 현재의 'ME‘가 남긴 흔적은 ‘WE’의 그림이 되어 미래의 ‘나’에게 전해진다.</div>
+                                <div class = "sa sa-left" data-sa-delay="700">언젠가 다시 ‘우리’의 삶을, 추억을 만들어갈 그날을 기약하며 오늘의 추억을 작품 속에 함께 남겨보자.</div>
+                                
+
                             </div>
                         </div>
                             <div class="how" style="min-width:320px;width:100%;">
                                 <div>
-                                    <figure class="sequence sa sa-up pc_only"><img src="../images/individual/individual_how1.PNG"></figure>
-                                    <div class="sequence_ex sa sa-right pc_only">1. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                                    <figure class="sequence sa sa-up pc_only"><img src="../images/individual/flow/kjh/kjh_flow_1.png"></figure>
+                                    <div class="sequence_ex sa sa-right pc_only">1. 앞선 관객들이 다녀간 흔적이 화면에 다양한 색으로 남아있다.</div>
                                 </div>
                                 <div>
-                                    <figure class="sequence sa sa-down pc_only" data-sa-delay="100"><img src="../images/individual/individual_how2.PNG" ></figure>
-                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="100">2. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                                    <figure class="sequence sa sa-down pc_only" data-sa-delay="100"><img src="../images/individual/flow/kjh/kjh_flow_2.png" ></figure>
+                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="100">2. 카메라 앞에서 움직이면 그 흔적들이 화면에 남는다.</div>
                                 </div>
                                 <div>
-                                    <figure class="sequence sa sa-up pc_only" data-sa-delay="200"><img src="../images/individual/individual_how3.PNG" ></figure>
-                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="200">3. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                                    <figure class="sequence sa sa-up pc_only" data-sa-delay="200"><img src="../images/individual/flow/kjh/kjh_flow_3.png" ></figure>
+                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="200">3. space bar를 누르면 그 흔적들이 모두 사라지고 화면이 새까맣게 리셋된다.</div>
                                 </div>
                             </div>
                     </div>
@@ -326,15 +314,15 @@
             <div class = "how_mobile" style="min-width:320px;width:100%;">
                 <div>
                     <figure class="sequence sa sa-up mobile_only"><img src="../images/individual/mobile/individual_how1_mobile.png"></figure>  
-                    <div class="sequence_ex sa sa-right mobile_only">1. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                    <div class="sequence_ex sa sa-right mobile_only">1. 앞선 관객들이 다녀간 흔적이 화면에 다양한 색으로 남아있다.</div>
                 </div>
                 <div>
                     <figure class="sequence sa sa-down mobile_only" data-sa-delay="100"><img src="../images/individual/mobile/individual_how2_mobile.png"></figure>  
-                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="100">2. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="100">2. 카메라 앞에서 움직이면 그 흔적들이 화면에 남는다.</div>
                 </div>
                 <div>
                     <figure class="sequence sa sa-up mobile_only" data-sa-delay="200"><img src="../images/individual/mobile/individual_how3_mobile.png"></figure>
-                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="200">3. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="200">3. space bar를 누르면 그 흔적들이 모두 사라지고 화면이 새까맣게 리셋된다.</div>
                 </div>  
             </div> 
         </div>
