--- a/data/pages/works_me_individual2.html
+++ b/data/pages/works_me_individual2.html
@@ -205,7 +205,7 @@
                 <div class="hover01 column">
                     <div>
                         <figure id="person" class="pc_only"><img src="../images/profile/34/김수빈34.png" ></figure>
-                        <figure class="mobile_only"><img src="../images/profile/1_1size/김수빈.jpg" ></figure>
+                        <figure id = "person_mobile" class="mobile_only"><img src="../images/profile/1_1size/김수빈.jpg" ></figure>
                     </div>
                 </div>
                 <div class="person_information">
